# start-stop-daemon

./: .gitignore  .mailmap  COPYRIGHT  Makefile  Makefile.lint  README  README.md  TODO  TODO.md  config.mk  crux-patch.diff  meson.build  meson.options  start-stop-daemon.8  start-stop-daemon.8.pod  start-stop-daemon.8.scdoc  start-stop-daemon.c  start-stop-daemon.pod  utils.mk
.github/workflows/: build.yml  c-cpp.yml  make.yml  release.yml
internal/: meson.build
man/: meson.build
src/: meson.build  start-stop-daemon.c
